<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.qc.cegep_heritage.mhaley_a03_hangman.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Display3"
        app:layout_constraintBottom_toTopOf="@+id/txtSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="38dp"
        android:text="@string/subtitle"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <Button
        android:id="@+id/btnPlay"
        style="@android:style/Widget.Material.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="238dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="72dp"
        android:text="@string/button_play"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubtitle" />

</android.support.constraint.ConstraintLayout>
